# technion-hw-archive

compilation/bison/bison-example/: attributes.h  truthval.l  truthval.ypp  truthval1.ypp
compilation/hw1/: a.out  demo.c  hw1-draft2.lex  lex.yy.c
compilation/hw1/versions/: hw1-subm-check.lex  hw1-ver-1.lex  hw1-ver-2.lex  hw1-ver-3.lex  lex.yy.c  selfcheck-hw1  subm-ver.lex
compilation/hw2/halamish/: lexer.lex  tokens.h
compilation/hw2/noam/: grammar.h  hw2  lex.yy.c  lexer.lex  tokens.h
compilation/hw3/noamh/: SymbolTable.hpp  output.cpp  output.hpp  parser.ypp  scanner.lex
compilation/hw3/noamk/: a.out  grammar.cpp  grammar.h  lex.yy.c  output.hpp  parser.ypp  scanner.lex  selfcheck-hw3  t1.out  t2.out
compilation/hw3/submission/: scanner.lex
compilation/hw3/workspace/: attributes.hpp  lex.yy.c  parser.hpp  parser.output  parser.tab.cpp  parser.tab.hpp  parser.ypp  tmp
compilation/hw5/: parser_noamha.ypp
compilation/hw5/Rana-ref/: Registers.h  (+5 more)
data-structures/hw1/: CMakeLists.txt  Node.h  SplayTree.cpp  SplayTree.h  library1.h  list.h
data-structures/hw2/: CMakeLists.txt  Colosseum.h  Exceptions.h  HashTable.cpp  HashTable.h  Heap.h  HeapNode.h  Objects.h  SplayNode.h  SplayRankTree.h  library2.cpp  main2.cpp
data-structures/hw2/tests/: dstest.h  hash_table_test.cpp  heap_test.cpp  rank_tree_test.cpp
introduction-to-system-programming/hw2/: challenge.h  challenge_system.h  challenge_system_test_1.c  challenge_test_1.c  constants.h  flat_text.c  maria_system_test.txt  student.txt  system1_file.txt  system2_file.txt  test_1.txt  visitor_room.h
(+640 files in other folders)
